--- a/as3snapi-sandbox/pom.xml
+++ b/as3snapi-sandbox/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>as3snapi</groupId>
         <artifactId>as3snapi</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>as3snapi</groupId>
             <artifactId>as3snapi-core</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>swc</type>
         </dependency>
 
